// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bar [common] example testing should match snapshot(s) for CustomColors 1`] = `
<div>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar"
      height="100"
      style="fill:#f80"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar"
      height="100"
      style="fill:#abc123"
      width="10"
      x="5"
      y="0"
    />
  </svg>
</div>
`;

exports[`Bar [common] example testing should match snapshot(s) for CustomDimensionUnits 1`] = `
<div>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar"
      height="100%"
      style="fill:#f80"
      width="10%"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar"
      height="100%"
      style="fill:#abc123"
      width="10%"
      x="5"
      y="0"
    />
  </svg>
</div>
`;

exports[`Bar [common] example testing should match snapshot(s) for RegularColors 1`] = `
<div>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-0-lightest"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-0-light"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-0"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-0-dark"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-0-darkest"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-1-lightest"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-1-light"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-1"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-1-dark"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-1-darkest"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-2-lightest"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-2-light"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-2"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-2-dark"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-2-darkest"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-3-lightest"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-3-light"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-3"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-3-dark"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-3-darkest"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-4-lightest"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-4-light"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-4"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-4-dark"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-4-darkest"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-5-lightest"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-5-light"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-5"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-5-dark"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-5-darkest"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-6-lightest"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-6-light"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-6"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-6-dark"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-6-darkest"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-good-light"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-good"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-good-dark"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-bad-light"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-bad"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-bad-dark"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
  <svg
    height="100"
    width="20"
  >
    <rect
      class="lucid-Bar lucid-Bar-color-chart-neutral"
      height="100"
      width="10"
      x="5"
      y="0"
    />
  </svg>
</div>
`;
